<resources>
    <string name="app_name">Task</string>
    <string name="title_activity_mandob__map">Map</string>
    <string name="task"> task </string>
    <string name="sginin"> Sign in </string>
    <string name="sginup"> Sign up </string>
    <string name="sginout"> Sign out </string>

    <string name="userName">User Name</string>
    <string name="adress">adress</string>
    <string name="missiontype">mission type</string>
    <string name="writeReport">write Report</string>
    <string name="title_activity_admin_map">Map</string>
    <string name="specialist">Special type</string>
    <string name="taskDetails">task details</string>
    <string name="teamType">team type</string>
    <string name="pickMap">Place</string>
    <string name="taskDuration">task Duration</string>
    <string name="timeFrom">From</string>
    <string name="timeTo">To</string>
    <string name="solo">solo</string>
    <string name="multi">multi</string>
    <string name="addAttachment"> add Attachment</string>
    <string name="shortTime">short</string>
    <string name="longTime">long</string>
    <string name="title_activity_target_map">target map</string>
    <string name="messages">Messages</string>
    <string name="changeLanguges">Change Languges</string>
    <string name="prority">priority</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="low">low</string>


    <array name="entries">
        <item>USD</item>
        <item>EUR</item>

    </array>
    <string name="title_activity_side_menu">SideMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CreateTeam">Create Team</string>
    <string name="home">home</string>
    <string name="Tasks">Tasks</string>
    <string name="Notifications">Notifications</string>
    <string name="ShareForApp">ShareForApp</string>
    <string name="Vote">Vote</string>

    <string name="createAccount">Create Account</string>
    <string name="CreateTeamToast">Createing Team Success</string>
    <string name="SelectLeader">Select Leader</string>
    <string name="title_activity_adress_map">Map</string>
    <string name="title_activity_mandop_side_menu">MandopSideMenu</string>
    <string name="title_activity_maps">Map</string>

</resources>
