<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/message"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_change"
            android:title="@string/changeLanguges" />

        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/CreateTeam" />

        <item
            android:id="@+id/nav_Notifications"
            android:icon="@drawable/notification"
            android:title="@string/Notifications" />


        <item
            android:id="@+id/nav_ShareForApp"
            android:icon="@drawable/share"
            android:title="@string/ShareForApp" />

        <item
            android:id="@+id/nav_Vote"
            android:icon="@drawable/rate"
            android:title="@string/Vote" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/sginout" />
    </group>

</menu>
