<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/changeLanguges" />

        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/CreateTeam" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sginout" />
    </group>

</menu>
