<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/task_details"
        android:textColor="#BDBDBD"
        android:textColorHint="#BDBDBD"
        android:hint="@string/taskDetails"

        />


    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/task_type"
        android:textColor="#BDBDBD"
        android:textColorHint="#BDBDBD"
        android:layout_below="@+id/task_details"
        android:layout_marginTop="5dp"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/teamType"
        android:layout_below="@+id/task_details"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/userName"
        android:layout_below="@+id/task_type"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/task_type"
        android:layout_marginTop="5dp"
        />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pickLocation"
        android:text="@string/pickMap"
        android:layout_below="@+id/spinner_name"
        android:background="@drawable/button_background"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/taskDuration"
        android:layout_below="@+id/pickLocation"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_duration"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/pickLocation"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startTimer"
        android:text="@string/timeFrom"
        android:layout_below="@+id/spinner_duration"
        android:background="@drawable/button_background"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/timeFrom"
        android:layout_below="@+id/startTimer"
        android:layout_marginTop="20dp"
        android:id="@+id/timeFrom"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/timeTo"
        android:layout_below="@+id/startTimer"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finishTimer"
        android:text="@string/timeTo"
        android:layout_below="@+id/spinner_duration"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_background"
        android:padding="10dp"
        />




</RelativeLayout>
    </ScrollView>