<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    tools:context="com.example2017.android.tasks.Admin.addTask">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_details"
            android:textColorHint="#BDBDBD"
            android:hint="@string/taskDetails"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/task_details"
            />


        <Spinner
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/task_type"
            android:textColor="#BDBDBD"
            android:textColorHint="#BDBDBD"
            android:layout_below="@+id/task_details"
            android:layout_marginTop="10dp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/teamType"
            android:layout_below="@+id/task_details"
            android:layout_marginTop="15dp"
            android:layout_alignParentRight="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/task_type"
            />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/userName"
            android:layout_below="@+id/task_type"
            android:layout_marginTop="25dp"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_name"
            android:textColor="#000"
            android:textColorHint="#FFFFFF"
            android:textSize="25dp"
            android:text="ssssas"
            android:layout_below="@+id/task_type"
            android:layout_marginTop="25dp"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/txt_name"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickLocation"
            android:text="@string/pickMap"
            android:layout_below="@+id/txt_name"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:onClick="but_pickLocation"
            android:layout_marginTop="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/pickLocation"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/taskDuration"
            android:layout_below="@+id/pickLocation"
            android:layout_marginTop="25dp"
            android:layout_alignParentRight="true"
            />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/spinner_duration"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:layout_below="@+id/pickLocation"
            android:layout_marginTop="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/spinner_duration"
            android:layout_marginTop="8dp"
            />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startTimer"
            android:text="@string/timeFrom"
            android:layout_below="@+id/spinner_duration"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/timeFrom"
            android:layout_below="@+id/startTimer"
            android:layout_marginTop="20dp"
            android:id="@+id/timeFrom"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/timeTo"
            android:layout_below="@+id/startTimer"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:id="@+id/timeTo"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/timeFrom"
            android:layout_marginTop="5dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prority"
            android:layout_below="@+id/timeTo"
            android:layout_marginTop="30dp"
            android:textSize="22dp"
            android:id="@+id/priority"
            />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_prority"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:layout_below="@+id/timeTo"
            android:layout_marginTop="15dp"
            android:layout_alignParentRight="true"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/priority"
            android:layout_marginTop="15dp"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endTimer"
            android:text="@string/timeTo"
            android:layout_below="@+id/spinner_duration"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            />




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addTask"
            android:text="Ok"
            android:layout_below="@+id/spinner_prority"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"
            />



    </RelativeLayout>
</ScrollView>